--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.0.0-beta.18",
     "ember-disable-proxy-controllers": "^1.0.0",
-    "ember-export-application-global": "^1.0.2"
+    "ember-export-application-global": "^1.0.2",
+    "gulp": "^3.9.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-tar": "^1.4.0",
+    "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.2.4"
   }
 }
